<resources>
    <string name="app_name">IntegralMe</string>
    <string name="back">Back</string>
    <string name="welcome_text">Welcome to IntegralMe!</string>
    <string name="example_integral">$\int \frac{1}{x} dx $</string>
    <string name="welcome_to_level">Welcome to the example level</string>
    <string name="title_activity_level">LevelActivity</string>
    <string name="difficulty">"Difficulty "</string>
    <string name="check">check</string>
    <string name="some_answers_are_incorrect">Some answers are incorrect</string>
    <string name="correct_answer_toast_text">"Correct! Series bonus points: "</string>
    <string name="games_history">Games history</string>
    <string name="problems">Problems:</string>
    <string name="score">Score:</string>
    <string name="times">Times:</string>
    <string name="settings">Settings</string>
    <string name="reset_problems_data">Reset problems data\n(click it if something is wrong with the app)</string>
    <string name="remove_data">Remove all personal data</string>
    <string name="are_you_sure_you_want_to_delete_all_user_data">Are you sure you want to delete all user data?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="successfully_removed_all_user_data">Successfully removed all user data</string>
    <string name="reset_successful">Reset successful</string>
    <string name="switch_view_to_problems_statistics">Switch view to problems statistics</string>
    <string name="switch_view_to_games_statistics">Switch view to games statistics</string>
    <string name="problem">Problem</string>
    <string name="tries">Tries</string>
    <string name="average_time">Average time</string>
    <string name="set_integrals_number_per_level">Set integrals number per level:</string>
    <string name="level_summary">Level summary</string>
    <string name="press_anywhere_to_close">Press anywhere to close</string>
    <string name="move_chosen_answer_string">Move chosen answer back to answers pool on click</string>
    <string name="order_games_history_string">Order games history from newest to oldest</string>
    <string name="animations_display">Animations display</string>
    <string name="tutorial">Tutorial</string>
    <string name="tutorial_description_0">This short tutorial will help you\nunderstand the game easily.</string>
    <string name="level">Level</string>
    <string name="levels">Levels</string>
    <string name="tutorial_description_1">This is the levels section.\nThere are 3 difficulty levels:\nZero - integrals to remember\nFirst - a little bit more advanced ones\nSecond - advanced integrals</string>
    <string name="tutorial_description_2">Choose level 0 to begin with</string>
    <string name="stage_number">Stage number</string>
    <string name="tutorial_description_3">Here you can find current\nstage number, which describes\nyour progress through the level</string>
    <string name="points">Points</string>
    <string name="tutorial_description_4">Here are the points that you\ncollected through the level</string>
    <string name="question">Question</string>
    <string name="tutorial_description_5">Here you can see the integral\nthat needs to be solved</string>
    <string name="empty_fields">Empty fields</string>
    <string name="tutorial_description_6">Here is the place to insert your answer\nto the problem. Now there is only one spot,\nbut on the higher difficulty levels\nyou will be asked to provide the answers\nin the correct order to achieve the result</string>
    <string name="answers">Answers</string>
    <string name="tutorial_description_7">Here are the potential\nanswers to your problem</string>
    <string name="answer_selection">Answer selection</string>
    <string name="tutorial_description_8">To select the answer\nsimply press it</string>
    <string name="answer_inserted">Answer inserted</string>
    <string name="tutorial_description_9">As you can see the answer\nwas inserted correctly</string>
    <string name="continue_string">Continue</string>
    <string name="tutorial_description_10">Press \"Check\" button to check\nyour answer and continue\nto the next stage</string>
    <string name="points_update">Points update</string>
    <string name="tutorial_description_11">As you can see,\nyou gained some points.\nCongratulations!</string>
    <string name="miss_click">Miss click</string>
    <string name="tutorial_description_12">Let\'s suppose you have chosen\na wrong answer. First pick it:</string>
    <string name="tutorial_description_13">To change your answer\nsimply press another one.\nIt will be placed automatically\nin the selected empty field</string>
    <string name="tutorial_description_14">As you can see,\nthe old answer got back\nto the answers pool</string>
    <string name="tutorial_description_15">Let\'s continue</string>
    <string name="wrong_check">Wrong check</string>
    <string name="tutorial_description_17">Please pick a wrong answer once again</string>
    <string name="tutorial_description_18">Now try to check the answers</string>
    <string name="tutorial_description_19">As you can see, you cannot\nproceed to the next stage unless\nall of the answers are correct.\nPlease pick the correct answer</string>
    <string name="finish">Finish</string>
    <string name="tutorial_description_20">Now finish the level</string>
    <string name="last_stage">Last stage</string>
    <string name="tutorial_description_16">It is time for the last stage.\nLet\'s try something different</string>
    <string name="congratulations">Congratulations!</string>
    <string name="tutorial_description_21">You have finished the tutorial.\nNow you are ready to play.\nIf you need this tutorial once again,\nit will be available in the settings section</string>
    <string name="display_tutorial">Display tutorial</string>
    <string name="quit_level">Are you sure you want to quit?\nAll progress in the current level will be lost.</string>
</resources>