<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".problemshistory.ProblemsHistoryActivity">

    <TextView
        android:id="@+id/GamesHistoryTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/title_margin_bottom"
        android:text="@string/games_history"
        android:textSize="@dimen/title_size" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/SwitchToGames"
        android:layout_below="@id/GamesHistoryTitle"
        android:stretchColumns="0,1,2">

        <TableRow>

            <TextView
                android:layout_column="0"
                android:gravity="start"
                android:text="@string/problem"
                android:textStyle="bold" />

            <TextView
                android:layout_column="1"
                android:gravity="end"
                android:text="@string/tries"
                android:textStyle="bold" />

            <TextView
                android:layout_column="2"
                android:gravity="end"
                android:text="@string/average_time"
                android:textStyle="bold" />
        </TableRow>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ProblemsStatsRecyclerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableLayout>


    <Button
        android:id="@+id/SwitchToGames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:text="@string/switch_view_to_games_statistics" />

</RelativeLayout>