<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <TextView
        android:id="@+id/DialogUSureTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="15dp"
        android:text="@string/are_you_sure_you_want_to_delete_all_user_data" />

    <Button
        android:id="@+id/DialogUSureYes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/DialogUSureTitle"
        android:layout_alignParentStart="true"
        android:text="@string/yes" />

    <Button
        android:id="@+id/DialogUSureCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/DialogUSureTitle"
        android:layout_alignParentEnd="true"
        android:text="@string/cancel" />

</RelativeLayout>