<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".settings.SettingsActivity">

    <TextView
        android:id="@+id/SettingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/title_margin_bottom"
        android:text="@string/settings"
        android:textSize="@dimen/title_size" />

    <Button
        android:id="@+id/ResetProblemsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/SettingsTitle"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/Margin_between_buttons_main_activity"
        android:text="@string/reset_problems_data" />

    <Button
        android:id="@+id/RemoveDataButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ResetProblemsButton"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/Margin_between_buttons_main_activity"
        android:text="@string/remove_data" />

    <TextView
        android:id="@+id/SetIntegralsNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/RemoveDataButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/set_integrals_number_per_level" />

    <com.google.android.material.slider.Slider
        android:id="@+id/SetIntegralsNumberBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/SetIntegralsNumber"
        android:stepSize="1"
        android:valueFrom="1"
        android:valueTo="6"
        app:labelBehavior="visible" />
</RelativeLayout>